--- a/css/hero.css
+++ b/css/hero.css
@@ -449,7 +449,7 @@
 }
 
 .teaching-accordion-item.active .teaching-accordion-title svg {
-  rotate: 180deg; 
+  transform: rotate(180deg);
 }
 
 .teaching__list {
